--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "nihadkeric",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^4.9.0"
+    "node-sass": "^4.9.3"
+  },
+  "dependencies": {
+    "live-server": "^1.2.0"
   }
 }
