--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "Landing page Orange",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "devserver":"live-server",
+    "start":"npm-run-all --parallel devserver watch:sass",
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css -w",
+    "concat:css": "concat -o css/style.css.concat.css css/icon-font.css css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
+    "compres:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compres:css"
   },
   "keywords": [
     "css",
@@ -14,7 +21,11 @@
   "author": "nihadkeric",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^4.9.3"
+    "autoprefixer": "^9.1.5",
+    "concat": "^1.0.3",
+    "node-sass": "^4.9.3",
+    "npm-run-all": "^4.1.3",
+    "postcss-cli": "^6.0.0"
   },
   "dependencies": {
     "live-server": "^1.2.0"
